fix(master-view): a part of the Messenger v2 back button was unexpectedly displayed on Edge < 16 (due to a user agent change) fix(cards): improve cards width on chatbots for small screens

--- a/Messenger UWP/Messenger UWP.csproj
+++ b/Messenger UWP/Messenger UWP.csproj
@@ -216,8 +216,8 @@
     <None Include="JavaScript\messenger-pwa\index.js" />
     <None Include="JavaScript\messenger-pwa\selectors.js" />
     <None Include="JavaScript\messenger-pwa\version.js" />
-    <None Include="JavaScript\messenger-pwa\viewport.js" />
     <None Include="CSS\cancel-media-queries.css" />
+    <None Include="CSS\cards.css" />
     <None Include="CSS\dialogs.css" />
     <None Include="CSS\info-panel.css" />
     <None Include="CSS\master-details.css" />
