fix(react-root): update the CSS selector used to retrieve the React instance (which caused app crash) fix(chat-box): ensure that the chat box is not covered by the container of GIF/audio recording/camera buttons on mobile fix(call): hide call buttons as this feature is broken

--- a/Messenger UWP/Messenger UWP.csproj
+++ b/Messenger UWP/Messenger UWP.csproj
@@ -211,6 +211,7 @@
     <None Include="CSS\cancel-media-queries.css" />
     <None Include="CSS\cards.css" />
     <None Include="CSS\dialogs.css" />
+    <None Include="CSS\hide-broken-features.css" />
     <None Include="CSS\info-panel.css" />
     <None Include="CSS\master-detail.css" />
     <None Include="CSS\picture-album.css" />
